tests/valid_programs/references/self_replace.duck
struct S = {
    v: Int
} impl {
    mut fn abc() {
        *self = S { v: 20 };
    }
};

fn main() {
    let s = S { v: 10 };
    s.v->std::string::from_int()->std::io::println();
    s.abc();
    s.v->std::string::from_int()->std::io::println();
}
