tests/errors/references/call_mut_method_const_struct.duck
struct S = {
}
impl {
    mut fn m() {}
};

fn main() {
    const s = S {};
    s.m();
}
